# cpp-gpt-2

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: main.cpp
ggml-helper/: CMakeLists.txt
ggml-helper/src/: common-ggml.cpp
gpt-2/: CMakeLists.txt
gpt-2/src/: gpt-2.cpp
